# pyir

./: .gitignore  README.md  opt.py  setup.cfg
bril_test/lvn/: clobber-arg.bril  clobber-fold.bril  clobber.bril  commute.bril  divide-by-zero.bril  fold-comparisons.bril  idchain-nonlocal.bril  idchain-prop.bril  idchain.bril  logical-operators.bril  nonlocal-clobber.bril  nonlocal.bril  reassign.bril  redundant-dce-chained.bril  redundant-dce-chained.out  redundant-dce.bril  redundant.bril  rename-fold.bril  turnt.toml
bril_test/tdce/: combo.bril  diamond.bril  double-pass.bril  double.bril  simple.bril  skipped.bril  turnt.toml
pyir/: __init__.py  component.py  ir_pass.py
pyir/interface/: bril.py
pyir/program/: hierarchical.py  hierarchical_impl.py  instruction.py  ir.py  ir_builder.py  ir_type.py  program.py  use.py
pyir/redundancy/: lvn.py  tdce.py
pyir/redundancy/numbering/: encoding.py  extension.py  table.py
pyir/unittest/: array_test.py
pyir/utils/: array.py  array_impl.py  map_list.py
