[metadata]
name = pyir
version = 1.0
author = pingjuilaio
author_email = pingjuiliao@gmail.com
description = Python-based Intermediate Representation 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
        Operating System :: OS Independent

# license_file = LICENSE.txt
